_assets/css/_blog.scss
body {
  font-family: 'Montserrat',  sans-serif;
  font-size: 20px;
  color: $gray-dark;
}
p {
  line-height: 1.5;
  margin: 30px 0;
}
p a, li a {
  text-decoration: underline;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
  font-weight: 800;
}

article picture img {
  width: 100%;
}

a:hover,
a:focus {
  color: $brand-primary;
}
a img:hover,
a img:focus {
  cursor: zoom-in;
}
blockquote {
  color: $gray;
  font-style: italic;
}
hr.small {
  max-width: 100px;
  margin: 15px auto;
  border-width: 4px;
  border-color: white;
}
.navbar-custom {
  background: $gray-light;
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.navbar-custom .navbar-brand {
  font-weight: 800;
}
.navbar-custom li a {
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 800;
  letter-spacing: 1px;
  text-decoration: none;
}

.navbar-custom li a:hover,
.navbar-custom li a:focus {
  color: $black;
  border: 2px solid $black;
  padding: 18px;
}

@media only screen and (min-width: 768px) {
  .navbar-custom {
    background: transparent;
    border-bottom: 1px solid transparent;
  }
  .navbar-custom .navbar-brand {
    color: $black;
    padding: 20px;
  }
  .navbar-custom .navbar-brand:hover,
  .navbar-custom .navbar-brand:focus {
    color: $white-faded;
  }
  .navbar-custom li a {
    color: white;
    padding: 20px 30px;
    min-width: 4em;
  }
}
@media only screen and (min-width: 1170px) {
  .navbar-custom {
    -webkit-transition: background-color 0.3s;
    -moz-transition: background-color 0.3s;
    transition: background-color 0.3s;
    /* Force Hardware Acceleration in WebKit */
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    -o-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }

}

.intro-header .site-heading,
.intro-header .post-heading,
.intro-header .page-heading {
  padding: 20px 0;
  color: white;
}


.intro-header .site-heading,
.intro-header .page-heading {
  text-align: center;
}


.intro-header .site-heading h1,
.intro-header .page-heading h1 {
  margin-top: 0;
  font-size: 50px;
}
.intro-header .site-heading .subheading,
.intro-header .page-heading .subheading {
  font-size: 24px;
  line-height: 1.1;
	display: block;
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 300;
  margin: 10px 0 0;
}
@media only screen and (min-width: 768px) {
  .intro-header .site-heading h1,
  .intro-header .page-heading h1 {
    font-size: 80px;
  }
}
.intro-header .post-heading h1 {
  font-size: 35px;
  text-shadow: 0 0 4px #000000;
}
.intro-header .post-heading h2 {
  text-shadow: 0 0 4px #000000;
}

.intro-header .post-heading .subheading,
.intro-header .post-heading .meta {
  line-height: 1.1;
  display: block;
}
.intro-header .post-heading .subheading {
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 24px;
  margin: 10px 0 30px;
  font-weight: 600;
}
.intro-header .post-heading .meta {
  font-family: 'Montserrat', serif;
  font-style: italic;
  font-weight: 300;
  font-size: 20px;
}
.intro-header .post-heading .meta a {
  color: white;
}
@media only screen and (min-width: 768px) {
  .intro-header .post-heading h1 {
    font-size: 55px;
  }
  .intro-header .post-heading .subheading {
    font-size: 30px;
  }
}
.post-preview > a {
  color: $gray-dark;
}
.post-preview > a:hover,
.post-preview > a:focus {
  text-decoration: none;
  color: $brand-primary;
}
.post-preview > a > .post-title {
  font-size: 30px;
  margin-top: 30px;
  margin-bottom: 10px;
}
.post-preview > a > .post-subtitle {
  margin: 0;
  font-weight: 300;
  margin-bottom: 10px;
}
.post-preview > .post-meta {
  color: $gray;
  font-size: 18px;
  font-style: italic;
  margin-top: 0;
}
.post-preview > .post-meta > a {
  text-decoration: none;
  color: $gray-dark;
}
.post-preview > .post-meta > a:hover,
.post-preview > .post-meta > a:focus {
  color: $brand-primary;
  text-decoration: underline;
}
@media only screen and (min-width: 768px) {
  .post-preview > a > .post-title {
    font-size: 36px;
  }
}
.section-heading {
  font-size: 36px;
  margin-top: 60px;
  font-weight: 700;
}
.caption {
  text-align: center;
  font-size: 14px;
  padding: 10px;
  font-style: italic;
  margin: 0;
  display: block;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}
footer {
  padding: 50px 0 65px;
}
footer .list-inline {
  margin: 0;
  padding: 0;
}
footer .copyright {
  font-size: 14px;
  text-align: center;
  margin-bottom: 0;
}
.floating-label-form-group {
  font-size: 14px;
  position: relative;
  margin-bottom: 0;
  padding-bottom: 0.5em;
  border-bottom: 1px solid $gray-light;
}
.floating-label-form-group input,
.floating-label-form-group textarea {
  z-index: 1;
  position: relative;
  padding-right: 0;
  padding-left: 0;
  border: none;
  border-radius: 0;
  font-size: 1.5em;
  background: none;
  box-shadow: none !important;
  resize: none;
}
.floating-label-form-group label {
  display: block;
  z-index: 0;
  position: relative;
  top: 2em;
  margin: 0;
  font-size: 0.85em;
  line-height: 1.764705882em;
  vertical-align: middle;
  vertical-align: baseline;
  opacity: 0;
  -webkit-transition: top 0.3s ease,opacity 0.3s ease;
  -moz-transition: top 0.3s ease,opacity 0.3s ease;
  -ms-transition: top 0.3s ease,opacity 0.3s ease;
  transition: top 0.3s ease,opacity 0.3s ease;
}
/*
.floating-label-form-group::not(:first-child) {
  padding-left: 14px;
  border-left: 1px solid $gray-light;
}
*/
.floating-label-form-group-with-value label {
  top: 0;
  opacity: 1;
}
.floating-label-form-group-with-focus label {
  color: $brand-primary;
}
form .row:first-child .floating-label-form-group {
  border-top: 1px solid $gray-light;
}
.btn {
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  border-radius: 0;
  padding: 15px 25px;
}
.btn-lg {
  font-size: 16px;
  padding: 25px 35px;
}
.btn-default:hover,
.btn-default:focus {
  background-color: $brand-primary;
  border: 1px solid $brand-primary;
  color: white;
}

.pagination {
  margin: 20px 0 0;
}
.pagination li > a,
.pagination li > span {
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  padding: 10px 5px;
  background-color: white;
  border-radius: 0;
  text-decoration: none;
}
@media only screen and (min-width: 768px) {
  .pagination li > a,
  .pagination li > span {
    font-size: 14px;
    padding: 15px 25px;
  }
}
.pagination li > a:hover,
.pagination li > a:focus {
  color: white;
  background-color: $brand-primary;
  border: 1px solid $brand-primary;
}
.pagination .disabled > a,
.pagination .disabled > a:hover,
.pagination .disabled > a:focus,
.pagination .disabled > span {
  color: $gray;
  background-color: $gray-dark;
  cursor: not-allowed;
}
::-moz-selection {
  color: white;
  text-shadow: none;
  background: $brand-primary;
}
::selection {
  color: white;
  text-shadow: none;
  background: $brand-primary;
}
img::selection {
  color: white;
  background: transparent;
}
img::-moz-selection {
  color: white;
  background: transparent;
}
body {
  webkit-tap-highlight-color: $brand-primary;
}

.content-container {
  margin-top: 50px;
}

.row-projects {
  margin-bottom: 4em;
}

.card-projects {
  margin-top: 4em;
  margin-bottom: 1em;

  a {
    img:hover {
     cursor: pointer;
    }
  }
}

